--- a/animationer.css
+++ b/animationer.css
@@ -1,83 +1,81 @@
 .falling {
-    animation-name: falling;
-    animation-duration: 3s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
+  animation-name: falling;
+  animation-duration: 10s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
 }
 
 @keyframes falling {
-    0% {
-        transform: translate(0,-300%);
-    }
+  0% {
+    transform: translate(0, -300%);
+  }
 
-    100% {
-        transform: translate(0,300%);
-    }
-    
+  100% {
+    transform: translate(0, 300%);
+  }
 }
 .moveright {
-    animation-name: moveright;
-    animation-duration: 5s;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
+  animation-name: moveright;
+  animation-duration: 5s;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
 }
 
 @keyframes moveright {
-    0% {
-        transform: translate(-700%, -200%);
-    }
+  0% {
+    transform: translate(-700%, -200%);
+  }
 
-    100% {
-        transform: translate(600%, -200%);
-    }
+  100% {
+    transform: translate(600%, -200%);
+  }
 }
 
 .glow {
-    animation-name: glow;
-    animation-duration: 1s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
+  animation-name: glow;
+  animation-duration: 1s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
 }
 
 @keyframes glow {
-    0% {
-        filter: drop-shadow(0px 0px 0px rgb(216, 216, 32))
-
-    } 100% {
-        filter: drop-shadow(0px 0px 16px rgb(216, 216, 32))
-    }
+  0% {
+    filter: drop-shadow(0px 0px 0px rgb(216, 216, 32));
+  }
+  100% {
+    filter: drop-shadow(0px 0px 16px rgb(216, 216, 32));
+  }
 }
 
 .zoom_in {
-    animation-name: zoom_in;
-    animation-duration: 1s;
-    animation-iteration-count: 1;
-    animation-fill-mode: forwards;
+  animation-name: zoom_in;
+  animation-duration: 1s;
+  animation-iteration-count: 1;
 }
 
 @keyframes zoom_in {
-    0% {
-        transform: translate(0, 0) scale(1) rotate(0deg);
-    }
-    90% {
-        transform: translate(100%, 0) scale(15) rotate(90deg);
-        opacity: 1;
-    }
-    100% {
-        transform: translate(100%, 0) scale(15) rotate(90deg);
-        opacity: 0;
-    }
+  0% {
+    transform: translate(0, 0) scale(1) rotate(0deg);
+  }
+  90% {
+    transform: translate(100%, 0) scale(15) rotate(90deg);
+    opacity: 1;
+  }
+  100% {
+    transform: translate(100%, 0) scale(15) rotate(90deg);
+    opacity: 0;
+  }
 }
 
 .zoom_out {
-    animation-name: zoom_out;
-    animation-duration: 1s;
-    animation-timing-function: linear;
-    animation-iteration-count: 1;
+  animation-name: zoom_out;
+  animation-duration: 1s;
+  animation-timing-function: linear;
+  animation-iteration-count: 1;
 }
 
 @keyframes zoom_out {
-    from {
+  from {
     transform: scale(1);
   }
   to {
@@ -86,57 +84,59 @@
 }
 
 .pulse {
-    animation-name: pulse;
-    animation-duration: 3s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
+  animation-name: pulse;
+  animation-duration: 3s;
+  animation-timing-function: linear;
+  animation-iteration-count: infinite;
 }
 
 @keyframes pulse {
-    0% {
-        transform: scale(0.95);
-  } 70% {
-        transform: scale(1.2);
-  } 100% {
-        transform: scale(0.95);
+  0% {
+    transform: scale(0.95);
+  }
+  70% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(0.95);
   }
 }
 
 .spiral {
-    animation-name: spiral;
-    animation-duration: 2s;
-    animation-iteration-count: 1;
-    animation-fill-mode: forwards;
-    transform-origin: 50% 150%;
+  animation-name: spiral;
+  animation-duration: 2s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+  transform-origin: 50% 150%;
 }
 
 @keyframes spiral {
-    0% {
-        transform: rotate(0deg) scale(1);
-    }
-    100% {
-        transform: rotate(720deg) scale(0);
-    }
+  0% {
+    transform: rotate(0deg) scale(1);
+  }
+  100% {
+    transform: rotate(720deg) scale(0);
+  }
 }
 
 .shrink {
-    animation-name: shrink_kf;
-    animation-duration: 45s;
-    animation-iteration-count: 1;
-    animation-timing-function: linear;
-    animation-fill-mode: forwards;
+  animation-name: shrink_kf;
+  animation-duration: 40s;
+  animation-iteration-count: 1;
+  animation-timing-function: linear;
+  animation-fill-mode: forwards;
 }
 
 @keyframes shrink_kf {
-    0% {
-        /* scale: 1 1; */
-        background-color: limegreen;
-    }
-    50% {
-        background-color: rgb(255, 230, 0);
-    }
-    100% {
-        scale: 1 0;
-        background-color: red;
-    }
+  0% {
+    /* scale: 1 1; */
+    background-color: limegreen;
+  }
+  50% {
+    background-color: rgb(255, 230, 0);
+  }
+  100% {
+    scale: 1 0;
+    background-color: red;
+  }
 }
